--- a/pitfall.html
+++ b/pitfall.html
@@ -4,7 +4,7 @@
 	<script src="atari.js" type="text/javascript"></script>
 	<script src="https://resources.amazonwebapps.com/v1/latest/Amazon-Web-App-API.min.js"></script>
     <meta charset="utf-8" />
-    <title>sprite editor</title>
+    <title>pitfall</title>
     <style>
     	* { padding: 0; margin: 0; }
     	canvas { background: #eee; display: block; margin: 0 auto; }
