--- a/lost.html
+++ b/lost.html
@@ -10,7 +10,7 @@
     	canvas { background: #eee; display: block; margin: 0 auto; }
     </style>
 </head>
-<body bgcolor="#000000">
+<body bgcolor="#0F0F0F">
 
 <canvas id="myCanvas" width="640" height="416"></canvas>
     <script src="lost.js" type="text/javascript"></script>
