--- a/lost.html
+++ b/lost.html
@@ -7,7 +7,7 @@
     <title>lost</title>
     <style>
     	* { padding: 0; margin: 0; }
-    	canvas { background: #eee; display: block; margin: 0 auto; }
+    	canvas { background: #eee; display: block; margin: auto; top: 0; bottom: 0; left: 0; right: 0;}
     </style>
 </head>
 <body bgcolor="#0F0F0F">
