--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<script src="atari.js" type="text/javascript"></script> 
+	<script src="atari.js" type="text/javascript"></script>
 
 	<script src="https://resources.amazonwebapps.com/v1/latest/Amazon-Web-App-API.min.js"></script>
     <meta charset="utf-8" />
     <title>main menu</title>
     <style>
     	* { padding: 0; margin: 0; }
-    	canvas { background: #eee; display: block; margin: 0 auto; }
+    	canvas { background: #eee; display: block; margin: auto; position: absolute; top: 0; bottom: 0; left: 0; right: 0;}
     </style>
   </head>
   <body bgcolor="#000000">
