--- a/lunarlander.html
+++ b/lunarlander.html
@@ -6,7 +6,7 @@
     <title>Lunar Lander</title>
     <style>
     	* { padding: 0; margin: 0; }
-    	canvas { background: #eee; display: block; margin: 0 auto; }
+    	canvas { background: #eee; display: block; margin: auto; position: absolute; top: 0; bottom: 0; left: 0; right: 0;}
     </style>
 </head>
 <body bgcolor="#010101">
