--- a/pitfall.html
+++ b/pitfall.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
 	<script src="atari.js" type="text/javascript"></script>
 	<script src="https://resources.amazonwebapps.com/v1/latest/Amazon-Web-App-API.min.js"></script>
     <meta charset="utf-8" />
     <title>pitfall</title>
     <style>
     	* { padding: 0; margin: 0; }
-    	canvas { background: #eee; display: block; margin: 0 auto; }
+    	canvas { background: #eee; display: block; margin: auto; position: absolute; top: 0; bottom: 0; left: 0; right: 0;}
     </style>
 </head>
 <body bgcolor="#000000">
 
 <canvas id="myCanvas" width="640" height="416"></canvas>
     <script src="pitfall.js" type="text/javascript"></script>
-  </body>
+</body>
 </html>
