--- a/lunarlander.html
+++ b/lunarlander.html
@@ -9,7 +9,7 @@
     	canvas { background: #eee; display: block; margin: auto; position: absolute; top: 0; bottom: 0; left: 0; right: 0;}
     </style>
 </head>
-<body bgcolor="#010101">
+<body bgcolor="#0E0E0E">
 
 <canvas id="canvas" width="400" height="400"></canvas>
     <script src="lunarlander.js" type="text/javascript"></script>
