--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
-	<script src="atari.js" type="text/javascript"></script>
-
-	<script src="https://resources.amazonwebapps.com/v1/latest/Amazon-Web-App-API.min.js"></script>
-    <meta charset="utf-8" />
-    <title>main menu</title>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>platform_js1k</title>
+ 
+  <canvas id="canvas"></canvas>
     <style>
-    	* { padding: 0; margin: 0; }
-    	canvas { background: #eee; display: block; margin: auto; position: absolute; top: 0; bottom: 0; left: 0; right: 0;}
+    html, body {width: 100%;height: 100%;margin: 0;border: 0;overflow: hidden;display: block}   
     </style>
   </head>
-  <body bgcolor="#000000">
-<canvas id="myCanvas" width="640" height="416"></canvas>
-      <script src="index.js" type="text/javascript"></script>
-  </body>
-</html>
+  <body>
+    <script src="script.js" type="text/javascript"></script>
+</body></html>
